server.log
C:\Users\syang\Documents\GitHub\Blog\app.js:58
	secret: config.redisStore.secret,
	^^^^^^

SyntaxError: Unexpected identifier
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (C:\Users\syang\Documents\GitHub\Blog\bin\www:7:11)
C:\Users\syang\Documents\GitHub\Blog\app.js:58
	resave: false,
	^^^^^^

SyntaxError: Unexpected identifier
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (C:\Users\syang\Documents\GitHub\Blog\bin\www:7:11)
Sat, 09 Dec 2017 04:57:07 GMT express-session deprecated req.secret; provide secret option at app.js:56:9
Sat, 09 Dec 2017 04:57:39 GMT express-session deprecated req.secret; provide secret option at app.js:56:9
Sat, 09 Dec 2017 04:59:42 GMT express-session deprecated req.secret; provide secret option at app.js:56:9
Sat, 09 Dec 2017 05:01:15 GMT express-session deprecated req.secret; provide secret option at app.js:56:9
Sat, 09 Dec 2017 05:03:20 GMT express-session deprecated req.secret; provide secret option at app.js:56:9
C:\Users\syang\Documents\GitHub\Blog\node_modules\passport-oauth1\lib\strategy.js:83
  if (!options.consumerKey) { throw new TypeError('OAuthStrategy requires a consumerKey option'); }
                              ^

TypeError: OAuthStrategy requires a consumerKey option
    at Strategy.OAuthStrategy (C:\Users\syang\Documents\GitHub\Blog\node_modules\passport-oauth1\lib\strategy.js:83:37)
    at new Strategy (C:\Users\syang\Documents\GitHub\Blog\node_modules\passport-google-oauth1\lib\strategy.js:50:17)
    at Object.<anonymous> (C:\Users\syang\Documents\GitHub\Blog\app.js:64:14)
    at Module._compile (module.js:570:32)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
Sat, 09 Dec 2017 05:04:03 GMT express-session deprecated req.secret; provide secret option at app.js:56:9
Sun, 10 Dec 2017 04:44:21 GMT express-session deprecated req.secret; provide secret option at app.js:56:9
